--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Josh Ramirez Villalobos"
   avatar           : "profile.png"
-  bio              : "Estudiante y atleta"
+  bio              : "Estudiante de Administración de tecnología de información en el ITCR y atleta"
   location         : "Puntarenas, Osa, Palmar Norte"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -94,12 +94,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "Joshua Ramírez Villalobos"
+  facebook         : "https://www.facebook.com/joshua.ramirezvillalobos"
   foursquare       :
-  github           : "academicpages"
+  github           : "https://github.com/JoshuaRV17"
   google_plus      :
   keybase          :
-  instagram        : "joshua_ramirezv"
+  instagram        : "https://www.instagram.com/joshua_ramirezv/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
