--- a/_config.yml
+++ b/_config.yml
@@ -94,12 +94,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/joshua.ramirezvillalobos"
+  facebook         : "joshua.ramirezvillalobos"
   foursquare       :
-  github           : "https://github.com/JoshuaRV17"
+  github           : "JoshuaRV17"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/joshua_ramirezv/"
+  instagram        : "joshua_ramirezv"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
