--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Joshua Ramirez Villalobos"
-  avatar           : "Perfil.jpeg"
+  avatar           : "diablo.png"
   bio              : "Estudiante de Administración de tecnología de información en el ITCR y atleta"
   location         : "Puntarenas, Osa, Palmar Norte"
   employer         :
