--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Joshua Ramirez Villalobos"
+  name             : ""
   avatar           : "images/Perfil.jpeg"
   bio              : "Estudiante de Administración de tecnología de información en el ITCR y atleta"
   location         : "Puntarenas, Osa, Palmar Norte"
