--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : ""
-  avatar           : "Perfil.jpeg"
+  name             : "Joshua Ramírez Villalobos"
+  avatar           : ""
   bio              : "Estudiante de Administración de tecnología de información en el ITCR y atleta"
   location         : "Puntarenas, Osa, Palmar Norte"
   employer         :
